Add complete lasagna recipe content with image, description, ingredients, and steps

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,6 +8,47 @@
 <body>
     <h1>Lasagna</h1>
     
+    <img src="https://www.allrecipes.com/thmb/MkKfYU4oim55CLp39DDuNMuyThA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.jpg" 
+         alt="Delicious layered lasagna with melted cheese" 
+         width="500">
+
+    <h2>Description</h2>
+    <p>This classic lasagna recipe is the ultimate comfort food, featuring layers of tender pasta, rich meat sauce, creamy ricotta, and melted mozzarella cheese. It's a timeless Italian dish that's perfect for family dinners or special occasions.</p>
+    <p>The recipe takes time to prepare but the result is well worth the effort, delivering a hearty, flavorful meal that will have everyone asking for seconds.</p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 pound sweet Italian sausage</li>
+        <li>1 pound lean ground beef</li>
+        <li>1 large onion, finely chopped</li>
+        <li>4 cloves garlic, minced</li>
+        <li>2 (28 ounce) cans crushed tomatoes</li>
+        <li>2 (6 ounce) cans tomato paste</li>
+        <li>1 package lasagna noodles</li>
+        <li>16 ounces ricotta cheese</li>
+        <li>1 egg</li>
+        <li>1/2 cup grated Parmesan cheese</li>
+        <li>1 pound mozzarella cheese, sliced</li>
+        <li>2 tablespoons fresh basil</li>
+        <li>1 tablespoon Italian seasoning</li>
+        <li>Salt and pepper to taste</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>In a large pot, cook sausage, ground beef, onion, and garlic until well browned.</li>
+        <li>Add crushed tomatoes, tomato paste, basil, and Italian seasoning. Simmer, covered, for about 1.5 hours, stirring occasionally.</li>
+        <li>Cook lasagna noodles in boiling water according to package directions. Drain and set aside.</li>
+        <li>In a mixing bowl, combine ricotta cheese with egg and 1/4 cup parmesan cheese.</li>
+        <li>Preheat oven to 375 degrees F (190 degrees C).</li>
+        <li>To assemble, spread 1.5 cups of meat sauce in the bottom of a 9x13 inch baking dish. Arrange 6 noodles lengthwise over meat sauce. Spread with one half of the ricotta cheese mixture. Top with a third of mozzarella cheese slices.</li>
+        <li>Spoon 1.5 cups meat sauce over mozzarella, and sprinkle with 1/4 cup Parmesan cheese.</li>
+        <li>Repeat layers, and top with remaining mozzarella and Parmesan cheese.</li>
+        <li>Cover with foil and bake in preheated oven for 25 minutes.</li>
+        <li>Remove foil, and bake an additional 25 minutes until hot and bubbly.</li>
+        <li>Let stand for 10-15 minutes before serving.</li>
+    </ol>
+
     <p><a href="../index.html">Back to Home</a></p>
 </body>
 </html> 
