Update recipe images with new working URLs from Unsplash

--- a/recipes/chicken-stir-fry.html
+++ b/recipes/chicken-stir-fry.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Chicken Stir-Fry</h1>
     
-    <img src="https://www.allrecipes.com/thmb/0WwIQ-X4WstyE4GhBiTXi9hnl7M=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/223382_chicken-stir-fry_Rita-1x1-1-b6b835ccfc714bb6a8391a7c47a06a84.jpg" 
+    <img src="https://images.unsplash.com/photo-1603133872878-684f208fb84b?q=80&w=1000" 
          alt="Colorful chicken stir-fry with vegetables" 
          width="500">
 
