--- a/recipes/chocolate-chip-cookies.html
+++ b/recipes/chocolate-chip-cookies.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Chocolate Chip Cookies</h1>
     
-    <img src="https://www.allrecipes.com/thmb/iM0vWJuq7RV0XtkU5DVJMBXHgJU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/best-chocolate-chip-cookies-4f4e91d27aa34e88a88f01e227a535c8.jpg" 
+    <img src="https://images.unsplash.com/photo-1499636136210-6f4ee915583e?q=80&w=1000" 
          alt="Fresh baked chocolate chip cookies" 
          width="500">
 
